# speech-guider

./: .eslintrc.json  .gitignore  AGENTS.md  LICENSE  PROJECT.md  QUICKSTART.md  README.md  USING_VENV.md  app.py  benchmark_mps.py  demo_pronunciation.py  demo_wav2vec2.py  eslint.config.mjs  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  requirements.txt  run.py  setup-arm64.sh  test_script.js  vitest.config.js
Plans/: Pronunciation & Prosody App Architecture.txt
app/: main.py
app/api/: analyze.py  comparison.py  errors.py  presets.py  prosody_lab.py  sse.py
app/services/: concurrency.py  state.py
app/templates/: index.html
app/utils/: audio.py
docs/: articulatory-animation-api.md
openspec/changes/add-musical-score-prosody-display/: design.md  proposal.md
openspec/changes/add-prosody-lab-voice-analysis/: design.md  tasks.md
openspec/changes/add-ssl-based-animation/: design.md  proposal.md  tasks.md
openspec/changes/add-ssl-comparison-playback/: design.md  proposal.md  tasks.md
scripts/: dev.sh  start-server.sh
src/: __init__.py
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: main.rs
src/audio/: __init__.py  processor.py  prosody_lab.py  reference_tts.py
src/llm/: __init__.py
src/models/: __init__.py  aai_adapter.py  alignment.py  articulatory.py  articulatory_calibration.py  contentvec.py  g2p.py  hubert.py  ssl_aai_predictor.py  wav2vec2.py
src/services/: comparison_cache.py
static/css/: vocal_tract.css
static/js/: app.js  comparison_lab.js  ipa_tooltips.js  mock_processor.js  pink_trombone_core.js  prosody_lab.js  recorder.js  ssl_comparison_controller.js  svg_articulatory_renderer.js  tauri_controller.js  vocal_tract.js
tests/: test_analyze_failure_modes.py  test_articulatory.py  test_articulatory_calibration.py  test_articulatory_mock.py  test_audio_fixtures.py  test_audio_processor.py  test_audio_utils_failure.py  test_cache_tts_errors.py  test_comparison_frames.py  test_contentvec.py  test_errors_fallback.py  test_integration_prosody.py  test_precision_alignment.py  test_prosody_lab.py  test_prosody_lab_fallback.py  test_ssl_aai_predictor.py  test_wav2vec2.py
tests/e2e/: audioPlayback.spec.js  errorAnalysis.spec.js
tests/js/: animationLab.test.js  ipaTooltips.test.js  prosodyLab.test.js  recorder.test.js  setup.js
(+46 files in other folders)
