[project]
name = "speech-guider"
version = "0.1.0"
description = "Pronunciation & Prosody Evaluator for ESL students"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "speech-guider/*",
    ".git",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist"
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
exclude = [
    "speech-guider/.*",
    "speech-guider/lib/.*",
    "\\.git",
    "__pycache__",
    ".*\\.egg-info",
    "\\.pytest_cache",
    "\\.mypy_cache",
    "\\.ruff_cache",
    "build",
    "dist",
    "venv",
    "env"
]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
