[project]
name = "speech-guider"
version = "0.1.0"
description = "Pronunciation & Prosody Evaluator for ESL students"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "speech-guider/*",
    ".git",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist"
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
exclude = [
    "speech-guider/.*",
    "speech-guider/lib/.*",
    "\\.git",
    "__pycache__",
    ".*\\.egg-info",
    "\\.pytest_cache",
    "\\.mypy_cache",
    "\\.ruff_cache",
    "build",
    "dist",
    "venv",
    "env"
]
warn_return_any = true
warn_unused_configs = true
strict_optional = false

# Targeted overrides for packages without type stubs
[[tool.mypy.overrides]]
module = [
    "parselmouth",
    "pyclts",
    "clts",
    "myspsolution",
    "mysp",
    "my_voice_analysis",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests"
]
